--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "express": "^4.17.1",
     "html-template-tag": "^3.2.0",
     "morgan": "^1.10.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^8.5.1",
+    "sequelize": "^6.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
